Fix align ChargeAnimation y ViewInConstruction

--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -1,4 +1,7 @@
 #itemListContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     height: 100%;
     h5 {
         margin: 1rem 0;
