--- a/src/widget/ChargeAnimation/ChargeAnimation.scss
+++ b/src/widget/ChargeAnimation/ChargeAnimation.scss
@@ -1,6 +1,6 @@
 #chargeAnimation {
-    justify-content: center;
     align-self: center;
+    justify-self: center;
     .spinner-border {
         height: 4rem;
         width: 4rem;
